Mon Jan 31 04:45:12 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* array.c (rb_ary_uniq_bang): call ARY_SET_LEN(ary, 0) before
	  rb_resize_capa because rb_resize_capa expects resized length is
	  smaller than current array length. call rb_ary_unshare before
	  rb_resize_capa because rb_resize_capa losts the reference to
	  original shared array. [ruby-core:34997]

Sun Jan 30 17:19:46 2011  Tanaka Akira  <akr@fsij.org>

	* missing/crypt.c: parenthesize macro arguments.

Sun Jan 30 16:40:27 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rubygems/test_gem_security.rb (TestGemSecurity): valid only
	  if OpenSSL is available.

	* test/dl/test_dl2.rb (TestDL#test_sin): math functions do not
	  work on x86_64 due to the design of DL2.

	* test/dl/test_func.rb (DL::TestFunc#test_{sinf,sin): ditto.

Sun Jan 30 16:09:22 2011  Tanaka Akira  <akr@fsij.org>

	* strftime.c (rb_strftime_with_timespec): %G produces 4 digits.

Sun Jan 30 15:13:19 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/emacs_mule.c (emacsmule_islead): 7bit range is also leading
	  byte.

Sun Jan 30 13:03:16 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_fetch_m): use useful message for longer key, not a
	  nonsense id value.

	* string.c (rb_str_ellipsize): new function to ellipsize a string.

	* include/ruby/encoding.h (rb_enc_step_back): new function to step
	  back n characters.

Sun Jan 30 12:53:38 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/emacs_mule.c (emacsmule_islead): fix inverse condition.

Sun Jan 30 09:37:25 2011  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* io.c (struct argf): char behaves like an unsigned char
	  by default on AIX.

Sun Jan 30 08:02:55 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: Mac OS X wrongly reports it has fdatasync(3).

Sun Jan 30 03:29:47 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_bn.c (GetBNPtr): add missing nil case.
	  patched by Martin Bosslet. [ruby-core:34987]
