@@ -1,3 +1,14 @@
+Mon Jan 31 12:26:14 2011  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* addr2line.c: suppressed shorten-64-to-32 warnings.
+	* regcomp.c: ditto.
+	* regexec.c: ditto.
+	* regint.h: ditto.
+	* regparse.c: ditto.
+	* regparse.h: ditto.
+	* time.c: ditto.
+	* variable.c: ditto.
+
 Mon Jan 31 04:45:12 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* array.c (rb_ary_uniq_bang): call ARY_SET_LEN(ary, 0) before
